Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSEIF
    EXIT
    FALSE
    LENGTH
    LIST
    PRINT
    SCAN
    TRUE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> empty
Rule 2     prog -> func prog
Rule 3     empty -> <empty>
Rule 4     stmt -> expr SEMI_COLON
Rule 5     stmt -> defvar SEMI_COLON
Rule 6     stmt -> func SEMI_COLON
Rule 7     stmt -> single_if
Rule 8     stmt -> else_if
Rule 9     stmt -> while_loop
Rule 10    stmt -> for_loop
Rule 11    stmt -> do_while
Rule 12    stmt -> return_is SEMI_COLON
Rule 13    stmt -> block
Rule 14    body -> empty
Rule 15    body -> stmt body
Rule 16    return_is -> RETURN expr
Rule 17    while_loop -> WHILE LPAREN expr RPAREN stmt
Rule 18    for_loop -> FOR LPAREN ID EQ expr TO expr RPAREN stmt
Rule 19    do_while -> DO stmt WHILE DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR
Rule 20    block -> BEGIN body END
Rule 21    single_if -> IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt
Rule 22    else_if -> IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt ELSE stmt
Rule 23    defvar -> ID DBL_COLON type
Rule 24    defvar -> ID DBL_COLON type EQ expr
Rule 25    type -> INT
Rule 26    type -> STRING
Rule 27    type -> VECTOR
Rule 28    type -> NULL
Rule 29    type -> BOOLEAN
Rule 30    func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
Rule 31    func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is
Rule 32    flist -> empty
Rule 33    flist -> ID AS type
Rule 34    flist -> ID AS type COMMA flist
Rule 35    clist -> empty
Rule 36    clist -> expr
Rule 37    clist -> expr COMMA clist
Rule 38    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 39    expr -> LSQUAREBR clist RSQUAREBR
Rule 40    expr -> expr QUESTION_MARK expr COLON expr
Rule 41    expr -> expr PLUS expr
Rule 42    expr -> expr MINUS expr
Rule 43    expr -> expr TIMES expr
Rule 44    expr -> expr DIVIDE expr
Rule 45    expr -> expr GREATER_THAN expr
Rule 46    expr -> expr LESS_THAN expr
Rule 47    expr -> expr DOUBLE_EQ expr
Rule 48    expr -> expr GREATER_THAN_EQ expr
Rule 49    expr -> expr LESS_THAN_EQ expr
Rule 50    expr -> expr NOT_EQ expr
Rule 51    expr -> expr AND expr
Rule 52    expr -> expr OR expr
Rule 53    expr -> NOT expr
Rule 54    expr -> PLUS expr
Rule 55    expr -> MINUS expr
Rule 56    expr -> ID
Rule 57    expr -> ID EQ expr
Rule 58    expr -> ID LPAREN clist RPAREN
Rule 59    expr -> NUMBER
Rule 60    expr -> STRING

Terminals, with rules where they appear

AND                  : 51
AS                   : 33 34
BEGIN                : 20
BOOLEAN              : 29
COLON                : 40
COMMA                : 34 37
DBL_COLON            : 23 24
DIVIDE               : 44
DO                   : 19
DOUBLE_EQ            : 47
DOUBLE_LSQUAREBR     : 19 21 22
DOUBLE_RSQUAREBR     : 19 21 22
ELSE                 : 22
ELSEIF               : 
END                  : 20
EQ                   : 18 24 31 57
EXIT                 : 
FALSE                : 
FN                   : 30 31
FOR                  : 18
GREATER_THAN         : 30 31 31 45
GREATER_THAN_EQ      : 48
ID                   : 18 23 24 30 31 33 34 56 57 58
IF                   : 21 22
INT                  : 25
LCURLYEBR            : 30
LENGTH               : 
LESS_THAN            : 30 31 46
LESS_THAN_EQ         : 49
LIST                 : 
LPAREN               : 17 18 30 31 58
LSQUAREBR            : 38 39
MINUS                : 42 55
NOT                  : 53
NOT_EQ               : 50
NULL                 : 28
NUMBER               : 59
OR                   : 52
PLUS                 : 41 54
PRINT                : 
QUESTION_MARK        : 40
RCURLYEBR            : 30
RETURN               : 16
RPAREN               : 17 18 30 31 58
RSQUAREBR            : 38 39
SCAN                 : 
SEMI_COLON           : 4 5 6 12
STRING               : 26 60
TIMES                : 43
TO                   : 18
TRUE                 : 
VECTOR               : 27
WHILE                : 17 19
error                : 

Nonterminals, with rules where they appear

block                : 13
body                 : 15 20 30
clist                : 37 39 58
defvar               : 5
do_while             : 11
else_if              : 8
empty                : 1 14 32 35
expr                 : 4 16 17 18 18 19 21 22 24 36 37 38 38 40 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 57
flist                : 30 31 34
for_loop             : 10
func                 : 2 6
prog                 : 2 0
return_is            : 12 31
single_if            : 7
stmt                 : 15 17 18 19 21 22 22
type                 : 23 24 30 31 33 34
while_loop           : 9

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (3) empty -> .
    (30) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    $end            reduce using rule 3 (empty -> .)
    FN              shift and go to state 4

    prog                           shift and go to state 1
    empty                          shift and go to state 2
    func                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> empty .

    $end            reduce using rule 1 (prog -> empty .)


state 3

    (2) prog -> func . prog
    (1) prog -> . empty
    (2) prog -> . func prog
    (3) empty -> .
    (30) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    $end            reduce using rule 3 (empty -> .)
    FN              shift and go to state 4

    func                           shift and go to state 3
    prog                           shift and go to state 5
    empty                          shift and go to state 2

state 4

    (30) func -> FN . ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN . ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    ID              shift and go to state 6


state 5

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 6

    (30) func -> FN ID . LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID . LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    LPAREN          shift and go to state 7


state 7

    (30) func -> FN ID LPAREN . flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN . flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is
    (32) flist -> . empty
    (33) flist -> . ID AS type
    (34) flist -> . ID AS type COMMA flist
    (3) empty -> .

    ID              shift and go to state 8
    RPAREN          reduce using rule 3 (empty -> .)

    flist                          shift and go to state 9
    empty                          shift and go to state 10

state 8

    (33) flist -> ID . AS type
    (34) flist -> ID . AS type COMMA flist

    AS              shift and go to state 11


state 9

    (30) func -> FN ID LPAREN flist . RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN flist . RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    RPAREN          shift and go to state 12


state 10

    (32) flist -> empty .

    RPAREN          reduce using rule 32 (flist -> empty .)


state 11

    (33) flist -> ID AS . type
    (34) flist -> ID AS . type COMMA flist
    (25) type -> . INT
    (26) type -> . STRING
    (27) type -> . VECTOR
    (28) type -> . NULL
    (29) type -> . BOOLEAN

    INT             shift and go to state 14
    STRING          shift and go to state 15
    VECTOR          shift and go to state 16
    NULL            shift and go to state 17
    BOOLEAN         shift and go to state 18

    type                           shift and go to state 13

state 12

    (30) func -> FN ID LPAREN flist RPAREN . LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN flist RPAREN . LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is

    LESS_THAN       shift and go to state 19


state 13

    (33) flist -> ID AS type .
    (34) flist -> ID AS type . COMMA flist

    RPAREN          reduce using rule 33 (flist -> ID AS type .)
    COMMA           shift and go to state 20


state 14

    (25) type -> INT .

    COMMA           reduce using rule 25 (type -> INT .)
    RPAREN          reduce using rule 25 (type -> INT .)
    GREATER_THAN    reduce using rule 25 (type -> INT .)
    EQ              reduce using rule 25 (type -> INT .)
    SEMI_COLON      reduce using rule 25 (type -> INT .)


state 15

    (26) type -> STRING .

    COMMA           reduce using rule 26 (type -> STRING .)
    RPAREN          reduce using rule 26 (type -> STRING .)
    GREATER_THAN    reduce using rule 26 (type -> STRING .)
    EQ              reduce using rule 26 (type -> STRING .)
    SEMI_COLON      reduce using rule 26 (type -> STRING .)


state 16

    (27) type -> VECTOR .

    COMMA           reduce using rule 27 (type -> VECTOR .)
    RPAREN          reduce using rule 27 (type -> VECTOR .)
    GREATER_THAN    reduce using rule 27 (type -> VECTOR .)
    EQ              reduce using rule 27 (type -> VECTOR .)
    SEMI_COLON      reduce using rule 27 (type -> VECTOR .)


state 17

    (28) type -> NULL .

    COMMA           reduce using rule 28 (type -> NULL .)
    RPAREN          reduce using rule 28 (type -> NULL .)
    GREATER_THAN    reduce using rule 28 (type -> NULL .)
    EQ              reduce using rule 28 (type -> NULL .)
    SEMI_COLON      reduce using rule 28 (type -> NULL .)


state 18

    (29) type -> BOOLEAN .

    COMMA           reduce using rule 29 (type -> BOOLEAN .)
    RPAREN          reduce using rule 29 (type -> BOOLEAN .)
    GREATER_THAN    reduce using rule 29 (type -> BOOLEAN .)
    EQ              reduce using rule 29 (type -> BOOLEAN .)
    SEMI_COLON      reduce using rule 29 (type -> BOOLEAN .)


state 19

    (30) func -> FN ID LPAREN flist RPAREN LESS_THAN . type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN flist RPAREN LESS_THAN . type GREATER_THAN EQ GREATER_THAN return_is
    (25) type -> . INT
    (26) type -> . STRING
    (27) type -> . VECTOR
    (28) type -> . NULL
    (29) type -> . BOOLEAN

    INT             shift and go to state 14
    STRING          shift and go to state 15
    VECTOR          shift and go to state 16
    NULL            shift and go to state 17
    BOOLEAN         shift and go to state 18

    type                           shift and go to state 21

state 20

    (34) flist -> ID AS type COMMA . flist
    (32) flist -> . empty
    (33) flist -> . ID AS type
    (34) flist -> . ID AS type COMMA flist
    (3) empty -> .

    ID              shift and go to state 8
    RPAREN          reduce using rule 3 (empty -> .)

    flist                          shift and go to state 22
    empty                          shift and go to state 10

state 21

    (30) func -> FN ID LPAREN flist RPAREN LESS_THAN type . GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN flist RPAREN LESS_THAN type . GREATER_THAN EQ GREATER_THAN return_is

    GREATER_THAN    shift and go to state 23


state 22

    (34) flist -> ID AS type COMMA flist .

    RPAREN          reduce using rule 34 (flist -> ID AS type COMMA flist .)


state 23

    (30) func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN . LCURLYEBR body RCURLYEBR
    (31) func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN . EQ GREATER_THAN return_is

    LCURLYEBR       shift and go to state 24
    EQ              shift and go to state 25


state 24

    (30) func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR . body RCURLYEBR
    (14) body -> . empty
    (15) body -> . stmt body
    (3) empty -> .
    (4) stmt -> . expr SEMI_COLON
    (5) stmt -> . defvar SEMI_COLON
    (6) stmt -> . func SEMI_COLON
    (7) stmt -> . single_if
    (8) stmt -> . else_if
    (9) stmt -> . while_loop
    (10) stmt -> . for_loop
    (11) stmt -> . do_while
    (12) stmt -> . return_is SEMI_COLON
    (13) stmt -> . block
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QUESTION_MARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr DOUBLE_EQ expr
    (48) expr -> . expr GREATER_THAN_EQ expr
    (49) expr -> . expr LESS_THAN_EQ expr
    (50) expr -> . expr NOT_EQ expr
    (51) expr -> . expr AND expr
    (52) expr -> . expr OR expr
    (53) expr -> . NOT expr
    (54) expr -> . PLUS expr
    (55) expr -> . MINUS expr
    (56) expr -> . ID
    (57) expr -> . ID EQ expr
    (58) expr -> . ID LPAREN clist RPAREN
    (59) expr -> . NUMBER
    (60) expr -> . STRING
    (23) defvar -> . ID DBL_COLON type
    (24) defvar -> . ID DBL_COLON type EQ expr
    (30) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is
    (21) single_if -> . IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt
    (22) else_if -> . IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt ELSE stmt
    (17) while_loop -> . WHILE LPAREN expr RPAREN stmt
    (18) for_loop -> . FOR LPAREN ID EQ expr TO expr RPAREN stmt
    (19) do_while -> . DO stmt WHILE DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR
    (16) return_is -> . RETURN expr
    (20) block -> . BEGIN body END

    RCURLYEBR       reduce using rule 3 (empty -> .)
    LSQUAREBR       shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    ID              shift and go to state 26
    NUMBER          shift and go to state 44
    STRING          shift and go to state 45
    FN              shift and go to state 4
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    FOR             shift and go to state 48
    DO              shift and go to state 49
    RETURN          shift and go to state 50
    BEGIN           shift and go to state 51

    body                           shift and go to state 27
    empty                          shift and go to state 28
    stmt                           shift and go to state 29
    expr                           shift and go to state 30
    defvar                         shift and go to state 31
    func                           shift and go to state 32
    single_if                      shift and go to state 33
    else_if                        shift and go to state 34
    while_loop                     shift and go to state 35
    for_loop                       shift and go to state 36
    do_while                       shift and go to state 37
    return_is                      shift and go to state 38
    block                          shift and go to state 39

state 25

    (31) func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ . GREATER_THAN return_is

    GREATER_THAN    shift and go to state 52


state 26

    (56) expr -> ID .
    (57) expr -> ID . EQ expr
    (58) expr -> ID . LPAREN clist RPAREN
    (23) defvar -> ID . DBL_COLON type
    (24) defvar -> ID . DBL_COLON type EQ expr

    SEMI_COLON      reduce using rule 56 (expr -> ID .)
    LSQUAREBR       reduce using rule 56 (expr -> ID .)
    QUESTION_MARK   reduce using rule 56 (expr -> ID .)
    PLUS            reduce using rule 56 (expr -> ID .)
    MINUS           reduce using rule 56 (expr -> ID .)
    TIMES           reduce using rule 56 (expr -> ID .)
    DIVIDE          reduce using rule 56 (expr -> ID .)
    GREATER_THAN    reduce using rule 56 (expr -> ID .)
    LESS_THAN       reduce using rule 56 (expr -> ID .)
    DOUBLE_EQ       reduce using rule 56 (expr -> ID .)
    GREATER_THAN_EQ reduce using rule 56 (expr -> ID .)
    LESS_THAN_EQ    reduce using rule 56 (expr -> ID .)
    NOT_EQ          reduce using rule 56 (expr -> ID .)
    AND             reduce using rule 56 (expr -> ID .)
    OR              reduce using rule 56 (expr -> ID .)
    EQ              shift and go to state 53
    LPAREN          shift and go to state 54
    DBL_COLON       shift and go to state 55


state 27

    (30) func -> FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body . RCURLYEBR

    RCURLYEBR       shift and go to state 56


state 28

    (14) body -> empty .

    RCURLYEBR       reduce using rule 14 (body -> empty .)
    END             reduce using rule 14 (body -> empty .)


state 29

    (15) body -> stmt . body
    (14) body -> . empty
    (15) body -> . stmt body
    (3) empty -> .
    (4) stmt -> . expr SEMI_COLON
    (5) stmt -> . defvar SEMI_COLON
    (6) stmt -> . func SEMI_COLON
    (7) stmt -> . single_if
    (8) stmt -> . else_if
    (9) stmt -> . while_loop
    (10) stmt -> . for_loop
    (11) stmt -> . do_while
    (12) stmt -> . return_is SEMI_COLON
    (13) stmt -> . block
    (38) expr -> . expr LSQUAREBR expr RSQUAREBR
    (39) expr -> . LSQUAREBR clist RSQUAREBR
    (40) expr -> . expr QUESTION_MARK expr COLON expr
    (41) expr -> . expr PLUS expr
    (42) expr -> . expr MINUS expr
    (43) expr -> . expr TIMES expr
    (44) expr -> . expr DIVIDE expr
    (45) expr -> . expr GREATER_THAN expr
    (46) expr -> . expr LESS_THAN expr
    (47) expr -> . expr DOUBLE_EQ expr
    (48) expr -> . expr GREATER_THAN_EQ expr
    (49) expr -> . expr LESS_THAN_EQ expr
    (50) expr -> . expr NOT_EQ expr
    (51) expr -> . expr AND expr
    (52) expr -> . expr OR expr
    (53) expr -> . NOT expr
    (54) expr -> . PLUS expr
    (55) expr -> . MINUS expr
    (56) expr -> . ID
    (57) expr -> . ID EQ expr
    (58) expr -> . ID LPAREN clist RPAREN
    (59) expr -> . NUMBER
    (60) expr -> . STRING
    (23) defvar -> . ID DBL_COLON type
    (24) defvar -> . ID DBL_COLON type EQ expr
    (30) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN LCURLYEBR body RCURLYEBR
    (31) func -> . FN ID LPAREN flist RPAREN LESS_THAN type GREATER_THAN EQ GREATER_THAN return_is
    (21) single_if -> . IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt
    (22) else_if -> . IF DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR stmt ELSE stmt
    (17) while_loop -> . WHILE LPAREN expr RPAREN stmt
    (18) for_loop -> . FOR LPAREN ID EQ expr TO expr RPAREN stmt
    (19) do_while -> . DO stmt WHILE DOUBLE_LSQUAREBR expr DOUBLE_RSQUAREBR
    (16) return_is -> . RETURN expr
    (20) block -> . BEGIN body END

    RCURLYEBR       reduce using rule 3 (empty -> .)
    END             reduce using rule 3 (empty -> .)
    LSQUAREBR       shift and go to state 40
    NOT             shift and go to state 43
    PLUS            shift and go to state 41
    MINUS           shift and go to state 42
    ID              shift and go to state 26
    NUMBER          shift and go to state 44
    STRING          shift and go to state 45
    FN              shift and go to state 4
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    FOR             shift and go to state 48
    DO              shift and go to state 49
    RETURN          shift and go to state 50
    BEGIN           shift and go to state 51

    stmt                           shift and go to state 29
    body                           shift and go to state 57
    empty                          shift and go to state 28
    expr                           shift and go to state 30
    defvar                         shift and go to state 31
    func                           shift and go to state 32
    single_if                      shift and go to state 33
    else_if                        shift and go to state 34
    while_loop                     shift and go to state 35
    for_loop                       shift and go to state 36
    do_while                       shift and go to state 37
    return_is                      shift and go to state 38
    block                          shift and go to state 39

state 30

    (4) stmt -> expr . SEMI_COLON
    (38) expr -> expr . LSQUAREBR expr RSQUAREBR
    (40) expr -> expr . QUESTION_MARK expr COLON expr
    (41) expr -> expr . PLUS expr
    (42) expr -> expr . MINUS expr
    (43) expr -> expr . TIMES expr
    (44) expr -> expr . DIVIDE expr
    (45) expr -> expr . GREATER_THAN expr
    (46) expr -> expr . LESS_THAN expr
    (47) expr -> expr . DOUBLE_EQ expr
    (48) expr -> expr . GREATER_THAN_EQ expr
    (49) expr -> expr . LESS_THAN_EQ expr
    (50) expr -> expr . NOT_EQ expr
    (51) expr -> expr . AND expr
    (52) expr -> expr . OR expr

    SEMI_COLON      shift and go to state 58
    LSQUAREBR       shift and go to state 59
    QUESTION_MARK   shift and go to state 60
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 64
    GREATER_THAN    shift and go to state 65
    LESS_THAN       shift and go to state 66
    DOUBLE_EQ       shift and go to state 67
    GREATER_THAN_EQ shift and go to state 68
    LESS_THAN_EQ    shift and go to state 69
    NOT_EQ          shift and go to state 70
    AND             shift and go to state 71
    OR              shift and go to state 72


state 31

    (5) stmt -> defvar . SEMI_COLON

    SEMI_COLON      shift and go to state 73


state 32

    (6) stmt -> func . SEMI_COLON

    SEMI_COLON      shift and go to state 74


state 33

    (7) stmt -> single_if .

    LSQUAREBR       reduce using rule 7 (stmt -> single_if .)
    NOT             reduce using rule 7 (stmt -> single_if .)
    PLUS            reduce using rule 7 (stmt -> single_if .)
    MINUS           reduce using rule 7 (stmt -> single_if .)
    ID              reduce using rule 7 (stmt -> single_if .)
    NUMBER          reduce using rule 7 (stmt -> single_if .)
    STRING          reduce using rule 7 (stmt -> single_if .)
    FN              reduce using rule 7 (stmt -> single_if .)
    IF              reduce using rule 7 (stmt -> single_if .)
    WHILE           reduce using rule 7 (stmt -> single_if .)
    FOR             reduce using rule 7 (stmt -> single_if .)
    DO              reduce using rule 7 (stmt -> single_if .)
    RETURN          reduce using rule 7 (stmt -> single_if .)
    BEGIN           reduce using rule 7 (stmt -> single_if .)
    RCURLYEBR       reduce using rule 7 (stmt -> single_if .)
    END             reduce using rule 7 (stmt -> single_if .)
    ELSE            reduce using rule 7 (stmt -> single_if .)


state 34

    (8) stmt -> else_if .

    LSQUAREBR       reduce using rule 8 (stmt -> else_if .)
    NOT             reduce using rule 8 (stmt -> else_if .)
    PLUS            reduce using rule 8 (stmt -> else_if .)
    MINUS           reduce using rule 8 (stmt -> else_if .)
    ID              reduce using rule 8 (stmt -> else_if .)
    NUMBER          reduce using rule 8 (stmt -> else_if .)
    STRING          reduce using rule 8 (stmt -> else_if .)
    FN              reduce using rule 8 (stmt -> else_if .)
    IF              reduce using rule 8 (stmt -> else_if .)
    WHILE           reduce using rule 8 (stmt -> else_if .)
    FOR             reduce using rule 8 (stmt -> else_if .)
    DO              reduce using rule 8 (stmt -> else_if .)
    RETURN          reduce using rule 8 (stmt -> else_if .)
    BEGIN           reduce using rule 8 (stmt -> else_if .)
    RCURLYEBR       reduce using rule 8 (stmt -> else_if .)
    END             reduce using rule 8 (stmt -> else_if .)
    ELSE            reduce using rule 8 (stmt -> else_if .)


state 35

    (9) stmt -> while_loop .
